Prevent title wrapping from misaligning the grid of results

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -36,4 +36,7 @@ a:hover {
 .video-title {
   text-align: center;
   margin-bottom: 30px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
